--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,8 +93,9 @@ img {
   box-shadow: 0 0 9e9Q inset aquamarine;
   background-color: var(--c);
 }
+/* -------BOMB------ */
 .bomb-cell {
-  background-image: url("/assets/img/bomb-background-design_1284-618.avif");
+  background-image: url("/assets/img/2.webp");
   background-repeat: no-repeat;
   background-size: cover;
 }
