--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ img {
 }
 /* -------BOMB------ */
 .bomb-cell {
-  background-image: url("../img/2.webp");
+  background-image: url("../img/bomb3.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
